# F5-TTS

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt  test_infer_single.py
.claude/: settings.local.json
docs/: IMPLEMENTATION_PLAN.md  RESTYLE_TTS_ARCHITECTURE.md  ROADMAP.md  TRAINING_GUIDE.md
model/: dataset.py
scripts/: label_prosody.py  train_all_styles.sh
src/f5_tts/: api.py
src/f5_tts/configs/: ReStyleTTS_Base.yaml
src/f5_tts/infer/: infer_gradio.py  infer_restyle_gradio.py  utils_infer.py
src/f5_tts/model/: cfm.py  dataset.py
src/f5_tts/model/backbones/: dit.py
src/f5_tts/restyle/: __init__.py  dcfg.py  olora_fusion.py  speaker_encoder.py  style_lora.py  tco.py
src/f5_tts/train/: train_style_lora.py
src/f5_tts/train/datasets/: prepare_tess.py  prepare_vctk.py
tests/: __init__.py  test_dcfg.py  test_label_prosody.py  test_olora_fusion.py  test_prepare_tess.py  test_prepare_vctk.py  test_style_lora.py  test_tco.py
